pufferlib/ocean/rware/rware.h

#define LOG_BUFFER_SIZE 1024
	
typedef struct Log Log;
struct Log {
    float perf;
    float score;
    float episode_return;
    float episode_length;
};
typedef struct LogBuffer LogBuffer;
struct LogBuffer {
    Log* logs;
    int length;
    int idx;
};
LogBuffer* allocate_logbuffer(int size) {
    LogBuffer* logs = (LogBuffer*)calloc(1, sizeof(LogBuffer));
    logs->logs = (Log*)calloc(size, sizeof(Log));
    logs->length = size;
    logs->idx = 0;
    return logs;
}
void free_logbuffer(LogBuffer* buffer) {
    free(buffer->logs);
    free(buffer);
}
Log aggregate_and_clear(LogBuffer* logs) {
    Log log = {0};
    if (logs->idx == 0) {
        return log;
    }
    for (int i = 0; i < logs->idx; i++) {
        log.episode_return += logs->logs[i].episode_return;
        log.episode_length += logs->logs[i].episode_length;
        log.score += logs->logs[i].score;   
        log.perf += fmaxf(0.0, logs->logs[i].score - 0.01*logs->logs[i].episode_length);
    }
    log.episode_return /= logs->idx;
    log.episode_length /= logs->idx;
    log.score /= logs->idx;
    log.perf /= logs->idx;
    logs->idx = 0;
    return log;
}
typedef struct MovementGraph MovementGraph;
struct MovementGraph {
    int* target_positions;
    int* cycle_ids;
    int* weights;
    int num_cycles;
};
typedef struct CRware CRware;
struct CRware {
    float* observations;
    int* actions;
    float* rewards;
    unsigned char* dones;
    LogBuffer* log_buffer;
    Log* logs;
    float* scores;
    int reward_type;
    int width;
    int height;
    int map_choice;
    int* warehouse_states;
    int num_agents;
    int num_requested_shelves;
    int* agent_locations;
    int* agent_directions;
    int* agent_states;
    int human_agent_idx;
    int grid_square_size;
    int* original_shelve_locations;
    MovementGraph* movement_graph;
};
void init(CRware* env) {
    int map_size = map_sizes[env->map_choice - 1];
    env->warehouse_states = (int*)calloc(map_size, sizeof(int));
    env->agent_locations = (int*)calloc(env->num_agents, sizeof(int));
    env->agent_directions = (int*)calloc(env->num_agents, sizeof(int));
    env->agent_states = (int*)calloc(env->num_agents, sizeof(int));
    env->scores = (float*)calloc(env->num_agents,sizeof(float));
    env->movement_graph = init_movement_graph(env);
    env->logs = (Log*)calloc(env->num_agents, sizeof(Log));
    if (env->map_choice == 1) {
        generate_map(env, tiny_map);
    }
    else if (env->map_choice == 2) {
        generate_map(env, small_map);
    }
    else {
        generate_map(env, medium_map);
    }
}
void free_allocated(CRware* env) {
    free(env->actions);
    free(env->observations);
    free(env->dones);
    free(env->rewards);
    free_logbuffer(env->log_buffer);
    free_initialized(env);
}
void c_reset(CRware* env) {
     
	env->dones[0] = 0;
    // set agents in center
    env->human_agent_idx = 0;
    if (env->map_choice == 1) {
        generate_map(env, tiny_map);
    } else if (env->map_choice == 2) {
        generate_map(env, small_map);
    } else {
        generate_map(env, medium_map);
    }
    for(int x = 0;x<env->num_agents; x++){
	    env->scores[x] = 0.0;
        env->logs[x] = (Log){0};
    }
    compute_observations(env);
    
}
void c_step(CRware* env) {
    memset(env->rewards, 0, env->num_agents * sizeof(float));
    MovementGraph* graph = env->movement_graph;
    for (int i = 0; i < env->num_agents; i++) {
        env->logs[i].episode_length += 1;
        int action = env->actions[i];
        
	// Handle direction changes and non-movement actions
        if (action != NOOP && action != TOGGLE_LOAD) {
            env->agent_directions[i] = get_direction(env, action, i);
        }
        if (action == TOGGLE_LOAD) {
            pickup_shelf(env, i);
        }
        if (action == FORWARD) {
            update_movement_graph(env, i);
        }
    }
    int is_movement=0;
    for(int i=0; i<env->num_agents; i++) {
        if (env->actions[i] == FORWARD) is_movement++;
    }
    if (is_movement>=1) {
        // Process movements in cycles first
        process_cycle_movements(env, graph);
        // process tree movements
        process_tree_movements(env, graph);
    }

    compute_observations(env);
}
typedef struct Client Client;
struct Client {
    float width;
    float height;
    Texture2D puffers;
};
Client* make_client(CRware* env) {
    Client* client = (Client*)calloc(1, sizeof(Client));
    client->width = env->width;
    client->height = env->height;
    InitWindow(env->width, env->height, "PufferLib Ray RWare");
    SetTargetFPS(60);
    client->puffers = LoadTexture("resources/puffers_128.png");
    return client;
}
void c_render(Client* client, CRware* env) {
    if (IsKeyDown(KEY_ESCAPE)) {
        exit(0);
    }
    BeginDrawing();
    
    int map_size = map_sizes[env->map_choice - 1];
    int cols = map_cols[env->map_choice - 1];
    for (int i = 0; i < map_size; i++) {
        int state = env->warehouse_states[i];
        Color color;
        if (state == SHELF) {
            color = PUFF_CYAN;
        } else if (state == REQUESTED_SHELF) {
            color = RED;
        } else if (state == GOAL) {
            color = STONE_GRAY;
        } else {
            color = PUFF_BACKGROUND;
        }

        int x_pos = i % cols * env->grid_square_size;
        int y_pos = i / cols * env->grid_square_size;
        DrawRectangle(
            x_pos,  // x position
            y_pos,  // y position
            env->grid_square_size, 
            env->grid_square_size, 
            color
        );
        
        DrawRectangleLines(
            x_pos,
            y_pos,
            env->grid_square_size,
            env->grid_square_size,
            PUFF_GREY
        );

        DrawRectangleLines(
            x_pos + 1,
            y_pos + 1,
            env->grid_square_size - 2,
            env->grid_square_size - 2,
            state != EMPTY ? WHITE : BLANK
        );
        // draw agent
        for (int j = 0; j < env->num_agents; j++) {
            if (env->agent_locations[j] != i) {
                continue;
            }
            int starting_sprite_x = 0;
            int rotation = 90*env->agent_directions[j];
            if (rotation == 180) {
                starting_sprite_x = 128;
                rotation = 0;
            }
            DrawTexturePro(
                client->puffers,
                (Rectangle){starting_sprite_x, 0, 128, 128},
                (Rectangle){
                    x_pos + env->grid_square_size/2,
                    y_pos + env->grid_square_size/2,
                    env->grid_square_size,
                    env->grid_square_size
                },
                (Vector2){env->grid_square_size/2, env->grid_square_size/2},
                rotation,
                //env->agent_states[j] != UNLOADED ? RED : WHITE
                WHITE
            );
            // put a number on top of the agent
            DrawText(
                TextFormat("%d", j),
                x_pos + env->grid_square_size/2,
                y_pos + env->grid_square_size/2,
                20,
                WHITE
            );
        }
    }
    ClearBackground(PUFF_BACKGROUND);    
    EndDrawing();
}
void close_client(Client* client) {
    CloseWindow();
    free(client);
}